Fix whitespace between sidebar and content, add card skeleton animation, reduce notification height for mobile screens

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -284,11 +284,11 @@ $fw-bold: 700;
         "sidebar header"
         "sidebar main"
         "sidebar footer";
+    grid-template-columns: auto 1fr;
     grid-template-rows: 90px auto auto;
     width: 100%;
     max-width: 100vw;
     min-height: 100vh;
-
 }
 
 .grid-header {
@@ -679,6 +679,7 @@ $fw-bold: 700;
 .tooltip {
     border: 1px solid rgba(0, 0, 0, 0);
     width: 30%;
+    height: fit-content;
     padding: var(--size-1);
     text-align: left;
     position: fixed;
@@ -3007,5 +3008,21 @@ textarea::placeholder {
     5%, 28.33% {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+.card--skeleton {
+    animation: loadingBackground 1.5s infinite;
+}
+
+@keyframes loadingBackground {
+    0% {
+        background-color: var(--fill-100);
+    }
+    50% {
+        background-color: var(--fill-50);
+    }
+    100% {
+        background-color: var(--fill-100);
     }
 }
